# portal2D

./: .gitignore  CMakeLists.txt  Makefile  README.md  client.h  common_active_socket.cpp  common_active_socket.h  common_passive_socket.cpp  common_passive_socket.h  common_socket.cpp  common_socket.h  server.h
data/: minimal.supp  server_settings.yaml
data/conf/: client.conf  server.conf
data/conf_test/: client.conf  server.conf
data/maps/: map1.yaml  map2.yaml  map3.yaml  map6.yaml  multi-1.yaml  solo-1-portals.yaml  solo-3-button-rock.yaml  test-acid.yaml  test-balls.yaml
data/maps/old/: map2.yaml  map4.yaml  map5.yaml
data/scenes/: hola-mundo.yaml
editor/: editor.html
include/: active_socket.h  client.h  color.h  renderer.h  screen.h  socket.h  sprite.h  surface.h  texture.h  texture_creator.h  window.h
include/client/: client.h  client_settings.h
include/client/event/: event_handler.h  keyboard_event.h  keyboard_handler.h  mouse_event.h  mouse_handler.h  window_event_handler.h
include/client/login/: login.h  login_screen.h
include/client/objects/: acid.h  animated_drawable.h  animated_drawable_box2D.h  background.h  block.h  button.h  diagonal_metal_block.h  drawable.h  drawable_box2D.h  end_barrier.h  energy_ball.h  energy_bar.h  energy_emitter.h  energy_receiver.h  gate.h  metal_block.h  objects.h  pin_tool.h  player.h  portal.h  rock.h  stone_block.h
include/client/screen/: animation.h  camera.h  renderer.h  screen.h  sprite.h  surface.h  texture_creator.h  texture_loader.h  window.h
include/client/screen_recorder/: screen_recorder.h
include/client/sound/: music.h  sound_effect.h  sound_manager.h
include/client/texture/: animation.h  color.h  finite_animation.h  sprite.h  surface.h  texture_creator.h  texture_loader.h
include/client/view/: animation.h  animation_manager.h  button.h  camera_manager.h  entity.h  event_handler.h  event_manager.h  input_handler.h  keyboard_test.h  main_player.h  mouse_handler.h  renderer.h  screen.h  sprite.h  sprite_manager.h  surface.h  texture.h  texture_creator.h  texture_database.h  texture_loader.h  view_object_creator.h  world_view.h  world_view_settings.h
include/client2/: client_interface.h  drawable_scene.h  p_entity.h  player_movement_handler.h
include/common/: click_direction.h  clock_loop.h  collision_box.h  entity.h  move_direction.h  position.h  ratio.h  scene.h  size.h  view_event.h  world.h
include/common/entities/: entities_settings.h  entities_types.h  entity.h  m_entity.h  p_entity.h
include/common/events/: dynamics_update.h  entity_destruction.h  portal_creation.h  portals_reset.h  state_update.h  view_event.h  world_event.h
include/common/objects/: click_button.h  click_direction.h  entity_position.h  portal_color.h  position.h  size.h  state.h
include/common/protocol/: abstract_thread.h  interface.h  protocol.h  receiver_thread.h  sender_thread.h
include/common/queue/: blocking_queue.h  safe_queue.h
include/common/socket/: active_socket.h  passive_socket.h
include/server/: INFO  client_manager.h  contact_listener.h  door_logica.h  end_zone.h  floor.h  game.h  game_status_checker.h  map.h  map_loader.h  physics_scene.h  player_entity.h  portal_ray_cast_callback.h  scene.h  server.h  server_interface.h  world.h
include/server/entities/: INFO  body_factory.h  body_linked_entity.h  button.h  door.h  end_barrier.h  energy_ball.h  energy_emitter.h  energy_emittor.h  energy_receiver.h  entity.h  entity_factory.h  gate.h  m_entity.h  player.h  portal.h  rock.h  state.h  state_entity.h  with_state.h  with_subscribable_state.h
include/server/events/: dynamics_update.h  event_creator.h  game_event.h  game_event_creator.h  world_event.h
include/server/objects/: game_status.h  math.h  server_settings.h
include/server/physics/: contact_listener.h  end_zone.h  grab_rock_callback.h  portal_aabb_callback.h  portal_ray_cast_callback.h  world.h
include/server/queue/: safe_queue.h
pruebaBox2D/: HOW_TO_USE.md  TallerTest.h
src/: client_main.cpp  server_main.cpp
src/client/: client.cpp  client_main.cpp  client_settings.cpp  p_entity.cpp
src/client/event/: event_handler.cpp  keyboard_event.cpp  mouse_event.cpp
src/client/login/: login.cpp  login_screen.cpp
src/client/objects/: acid.cpp  animated_drawable.cpp  animated_drawable_box2D.cpp  background.cpp  block.cpp  button.cpp  diagonal_metal_block.cpp  drawable_box2D.cpp  end_barrier.cpp  energy_ball.cpp  energy_bar.cpp  energy_emitter.cpp  energy_receiver.cpp  gate.cpp  metal_block.cpp  pin_tool.cpp  player.cpp  portal.cpp  rock.cpp  stone_block.cpp
src/client/screen/: animation.cpp  camera.cpp  color.cpp  renderer.cpp  screen.cpp  sprite.cpp  surface.cpp  texture.cpp  texture_creator.cpp  texture_loader.cpp  window.cpp
src/client/screen_recorder/: screen_recorder.cpp
src/client2/: client_interface.cpp  drawable_scene.cpp  player_movement_handler.cpp
src/common/: collision_box.cpp  color.cpp  entity.cpp  position.cpp  renderer.cpp  scene.cpp  screen.cpp  surface.cpp  texture.cpp  texture_creator.cpp  view_event.cpp  window.cpp  world.cpp
src/game/: client_test.cpp  game_main.cpp  server_scene.cpp  server_scene.hpp  server_test.cpp
src/scenes/: diagonal_metal_block.cpp  diagonal_metal_block.h  dynamic_element.h  dynamic_element.hpp  main.cpp  metal_block.h  metal_block.hpp  static_element.h  static_element.hpp  static_scene.cpp  static_scene.h  static_scene.hpp  stone_block.h  stone_block.hpp
src/server/: client_manager.cpp  contact_listener.cpp  door_logica.cpp  end_zone.cpp  game.cpp  game_status_checker.cpp  map.cpp  map_loader.cpp  physics_scene.cpp  player_entity.cpp  portal_ray_cast_callback.cpp  scene.cpp  server.cpp  server_interface.cpp  server_main.cpp  world.cpp
test/: button.cpp  character.cpp  key_detector.cpp  test_animation.cpp  test_button.cpp  test_interface_client.cpp  test_interface_server.cpp  test_keyboard.cpp  test_mouse.cpp  test_sound.cpp  test_surface.cpp  test_view_player_block.cpp  test_window.cpp
test/include/: button.h  character.h  key_detector.h  test_button.h
(+112 files in other folders)
